# i2psam

./: README.md  pyproject.toml
examples/: chat.py
i2psam/: __init__.py  exceptions.py  logs.py  types.py  utils.py
i2psam/client/: __init__.py  client.py  config.py  connection.py  datagram.py  session.py
i2psam/commands/: __init__.py  base.py  commands.py
tests/: test_commands.py  test_connection.py  test_datagram.py  test_logs.py  test_utils.py
