[project]
name = "i2psam"
version = "1.0.0"
description = "Async Python client for the I2P SAM (Simple Anonymous Messaging) protocol."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.15.4",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"