[project]
name = "i2psam"
description = "Async Python client for the I2P SAM (Simple Anonymous Messaging) protocol."
readme = "README.md"
authors = [
    {name = "Vladyslav Chaliuk",email = "chaliukvladyslav@gmail.com"}
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.15.4",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"